--- a/0x00-semantic_html/2-index.html
+++ b/0x00-semantic_html/2-index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="A blog post about semantic HTML and accessibility practises">
     <meta name="keywords" content="HTML, Semantic, Accessibility, Blog, SEO">
-    <meta name="author" content="">
+    <meta name="author" content="Yamlak">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semantic Html Blog Post</title>
 </head>
