--- a/0x02-tailwind-css/3-nav_index.html
+++ b/0x02-tailwind-css/3-nav_index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Navigation Bar</title>
-    <link href="./src/output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <link href="./src/output.css" rel="stylesheet"> -->
     <style>
         @media (max-width: 768px) {
             nav {
@@ -20,10 +21,10 @@
     </header>
 
     <nav class="flex space-x-5 justify-center bg-gray-300 text-white p-4">
-        <a href="#" class="px-2 text-xl hover:bg-gray-500 p-2 rounded-lg">Home</a>
-        <a href="#" class="px-2 text-xl hover:bg-gray-500 p-2 rounded-lg">About</a>
-        <a href="#" class="px-2 text-xl hover:bg-gray-500 p-2 rounded-lg">Services</a>
-        <a href="#" class="px-2 text-xl hover:bg-gray-500 p-2 rounded-lg">Contact</a>
+        <a href="#" class="px-2 text-xl rounded-lg hover:bg-gray-500 p-2">Home</a>
+        <a href="#" class="px-2 text-xl rounded-lg hover:bg-gray-500 p-2">About</a>
+        <a href="#" class="px-2 text-xl rounded-lg hover:bg-gray-500 p-2">Services</a>
+        <a href="#" class="px-2 text-xl rounded-lg hover:bg-gray-500 p-2">Contact</a>
     </nav>
 </body>
 </html> 
