--- a/0x02-tailwind-css/4-flexbox_index.html
+++ b/0x02-tailwind-css/4-flexbox_index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="p-4">
     <header class="mb-4">
-        <h1 class="text-3xl text-red-700 font-bold">Responsive Flexbox Layout</h1>
+        <h1 class="text-3xl font-bold">Responsive Flexbox Layout</h1>
     </header>
 
     <main class="flex">
