--- a/0x02-tailwind-css/2-index.html
+++ b/0x02-tailwind-css/2-index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complex Grid Layout</title>
-    <link href="./src/output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <link href="./src/output.css" rel="stylesheet"> -->
 </head>
 <body class="p-4">
     <header>
